--- a/Predictive_model_of_household_income_using_clustering.ipynb
+++ b/Predictive_model_of_household_income_using_clustering.ipynb
@@ -7,7 +7,7 @@
         "id": "wvzw0Cp17zVP"
       },
       "source": [
-        "# CS 180 Project: Predictive model of household income using clustering\n",
+        "# CS 180 Project: Clustering of Filipino Households using K-Means\n",
         "-----------------------------------------------------------------------------------------------------------------------------------------------"
       ]
     },
